@@ -1,13 +1,0 @@
-subarch lasat
-cpuinfo mq_pro.cpuinfo
-majors 2.4
-flavour r5k-lasat
-kernel-2.4 kernel-image-2.4.27-r5k-lasat
-usable \
-  kernel-image-2.4.27-r5k-lasat
-unusable \
-  kernel-image-2.4.27-r3k-kn02 \
-  kernel-image-2.4.27-r4k-kn04 \
-  kernel-image-2.4.27-sb1-swarm-bn \
-  kernel-image-2.4.27-xxs1500 \
-  kernel-image-2.4.27-r5k-cobalt
