@@ -4,6 +4,8 @@ base-installer (1.51) unstable; urgency=low
     "SWARM") got changed from sb1-swarm-bn to sb1-bcm91250a while the
     2.4 kernel uses the former.  Update the kernel selection and the
     test suite.
+  * Remove kernel detection for LASAT since this machine was never
+    supported.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 17 Mar 2006 20:31:16 +0000
 
